<?xml version="1.0"?>
<package format="2">
  <name>ballbot_pybullet_sim</name>
  <version>0.1.0</version>
  <description>The ballbot_pybullet_sim package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ballbot@todo.todo">ballbot</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ballbot_pybullet_sim</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="cornelib@andrew.cmu.edu">Cornelia Bauer</author>
  <author email="rshum@cmu.edu">Roberto Shu </author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ballbot_arm_description</build_depend>
  <build_depend>ballbot_arm_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rt_msgs</build_depend>
  <build_export_depend>ballbot_arm_description</build_export_depend>
  <build_export_depend>ballbot_arm_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rt_msgs</build_export_depend>
  <exec_depend>ballbot_arm_description</exec_depend>
  <exec_depend>ballbot_arm_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rt_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
